--- a/nagsa/nagsa/nagsa.vbproj
+++ b/nagsa/nagsa/nagsa.vbproj
@@ -115,6 +115,12 @@
     <Compile Include="Customer.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form Bayar Piutang.Designer.vb">
+      <DependentUpon>Form Bayar Piutang.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form Bayar Piutang.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form Penjualan.Designer.vb">
       <DependentUpon>Form Penjualan.vb</DependentUpon>
     </Compile>
@@ -140,6 +146,12 @@
     <Compile Include="Formutama.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form_bayar_hutang.Designer.vb">
+      <DependentUpon>Form_bayar_hutang.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form_bayar_hutang.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Isi Supplier.Designer.vb">
       <DependentUpon>Isi Supplier.vb</DependentUpon>
     </Compile>
@@ -160,6 +172,18 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="Nominal_bayar_hutang.Designer.vb">
+      <DependentUpon>Nominal_bayar_hutang.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Nominal_bayar_hutang.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Nominal_bayar_piutang.Designer.vb">
+      <DependentUpon>Nominal_bayar_piutang.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Nominal_bayar_piutang.vb">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Pembelian.Designer.vb">
       <DependentUpon>Pembelian.vb</DependentUpon>
@@ -205,6 +229,9 @@
     <EmbeddedResource Include="Customer.resx">
       <DependentUpon>Customer.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form Bayar Piutang.resx">
+      <DependentUpon>Form Bayar Piutang.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form Penjualan.resx">
       <DependentUpon>Form Penjualan.vb</DependentUpon>
     </EmbeddedResource>
@@ -217,6 +244,9 @@
     <EmbeddedResource Include="Formutama.resx">
       <DependentUpon>Formutama.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form_bayar_hutang.resx">
+      <DependentUpon>Form_bayar_hutang.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Isi Supplier.resx">
       <DependentUpon>Isi Supplier.vb</DependentUpon>
     </EmbeddedResource>
@@ -226,6 +256,12 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Nominal_bayar_hutang.resx">
+      <DependentUpon>Nominal_bayar_hutang.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Nominal_bayar_piutang.resx">
+      <DependentUpon>Nominal_bayar_piutang.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Pembelian.resx">
       <DependentUpon>Pembelian.vb</DependentUpon>
