--- a/nagsa/nagsa/nagsa.vbproj
+++ b/nagsa/nagsa/nagsa.vbproj
@@ -216,6 +216,18 @@
     <Compile Include="Pembelian.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Print Menu Pembelian.Designer.vb">
+      <DependentUpon>Print Menu Pembelian.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Print Menu Pembelian.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Print Menu Penjualan.Designer.vb">
+      <DependentUpon>Print Menu Penjualan.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Print Menu Penjualan.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Retur Pembelian.Designer.vb">
       <DependentUpon>Retur Pembelian.vb</DependentUpon>
     </Compile>
@@ -303,8 +315,16 @@
     <EmbeddedResource Include="Pembelian.resx">
       <DependentUpon>Pembelian.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Print Menu Pembelian.resx">
+      <DependentUpon>Print Menu Pembelian.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Print Menu Penjualan.resx">
+      <DependentUpon>Print Menu Penjualan.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Report1.rdlc" />
     <EmbeddedResource Include="Report2.rdlc" />
+    <EmbeddedResource Include="Report3.rdlc" />
+    <EmbeddedResource Include="Report5.rdlc" />
     <EmbeddedResource Include="Retur Pembelian.resx">
       <DependentUpon>Retur Pembelian.vb</DependentUpon>
     </EmbeddedResource>
