--- a/nagsa/nagsa/nagsa.vbproj
+++ b/nagsa/nagsa/nagsa.vbproj
@@ -304,6 +304,12 @@
     <Compile Include="Pembelian.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Print Detail Stok.Designer.vb">
+      <DependentUpon>Print Detail Stok.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Print Detail Stok.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Print Menu Pembelian.Designer.vb">
       <DependentUpon>Print Menu Pembelian.vb</DependentUpon>
     </Compile>
@@ -454,6 +460,9 @@
     <EmbeddedResource Include="Pembelian.resx">
       <DependentUpon>Pembelian.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Print Detail Stok.resx">
+      <DependentUpon>Print Detail Stok.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Print Menu Pembelian.resx">
       <DependentUpon>Print Menu Pembelian.vb</DependentUpon>
     </EmbeddedResource>
@@ -476,6 +485,7 @@
     <EmbeddedResource Include="Report16.rdlc" />
     <EmbeddedResource Include="Report17.rdlc" />
     <EmbeddedResource Include="Report18.rdlc" />
+    <EmbeddedResource Include="Report19.rdlc" />
     <EmbeddedResource Include="Report2.rdlc" />
     <EmbeddedResource Include="Report3.rdlc" />
     <EmbeddedResource Include="Report5.rdlc" />
