penjualan & pembelian done

--- a/nagsa/nagsa/nagsa.vbproj
+++ b/nagsa/nagsa/nagsa.vbproj
@@ -509,6 +509,9 @@
     <EmbeddedResource Include="Report21.rdlc" />
     <EmbeddedResource Include="Report22.rdlc" />
     <EmbeddedResource Include="Report23.rdlc" />
+    <EmbeddedResource Include="Report24.rdlc" />
+    <EmbeddedResource Include="Report25.rdlc" />
+    <EmbeddedResource Include="Report26.rdlc" />
     <EmbeddedResource Include="Report3.rdlc" />
     <EmbeddedResource Include="Report5.rdlc" />
     <EmbeddedResource Include="Report6.rdlc" />
